fixed not showing images

--- a/frontend/src/app/components/user-products/user-products.component.css
+++ b/frontend/src/app/components/user-products/user-products.component.css
@@ -268,6 +268,6 @@
 mat-dialog-container{
   position: relative;
   top:60px;
-  width: 650px;
+  width: 50rem;
   height: auto;
 }
